<resources>
    <string name="app_name">BLEconnection</string>
    <string name="title_activity_maps2">Map</string>
    <string name="edittext_hint_search">Search Room</string>
    <string name="searchtext">Search here</string>
    <string name="button_back">back</string>
    <string name="text_showmylocation">My Location</string>
    <string name="text_shownavigation">Navigation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_indoor_plate">IndoorPlateActivity</string>
    <string name="text_on">ON</string>
    <string name="text_off">OFF</string>
    <string name="guide_to">Guide to</string>
    <string name="guide">Guide</string>
    <string name="scan_qr">Scan QR Code To Queuing</string>
    <string name="current_que">Current Queue</string>
    <string name="wait">Wait</string>
    <string name="waiting_time">Wait around</string>
    <string name="not_queing"> ---- </string>
    <string name="my_queue">Queue</string>
</resources>
