<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/mapview"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <LinearLayout
            android:id="@+id/searchBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/search_background"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_box"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/search_font_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <ImageButton
                        android:id="@+id/button_background"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_android_black_24dp" />

                    <TextView
                        android:id="@+id/text_show_search"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:text="@string/searchtext"
                        android:textColor="@android:color/darker_gray" />

                    <ImageButton
                        android:id="@+id/button_search_delete_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_close_black_48dp" />

                    <TextView
                        android:id="@+id/line_1"
                        android:layout_width="2dp"
                        android:layout_height="40dp"
                        android:background="@android:color/darker_gray"
                        android:visibility="visible" />

                    <ImageButton
                        android:id="@+id/button_navigation"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:visibility="visible"
                        app:srcCompat="@drawable/ic_navigation_skyblue_24dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/search_back_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageButton
                        android:id="@+id/search_back_to_font"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_chevron_left_black_24dp" />

                    <EditText
                        android:id="@+id/editText_search_place_2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/searchtext"
                        android:inputType="textPersonName" />

                    <ImageButton
                        android:id="@+id/button_search"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        app:srcCompat="@drawable/ic_magnify_black_48dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/navigation_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageButton
                        android:id="@+id/navigation_back_to_search"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_chevron_left_black_24dp" />

                    <EditText
                        android:id="@+id/editText_navigation"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/guide_to"
                        android:inputType="textPersonName" />

                    <Button
                        android:id="@+id/button_set_navigation"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/guide"
                        android:textAllCaps="false" />

                </LinearLayout>

            </LinearLayout>

            <ListView
                android:id="@+id/mListPlaceName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <ListView
                android:id="@+id/ListViewRoomName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>